--- a/IdeaScale_POM_0001/.gitignore
+++ b/IdeaScale_POM_0001/.gitignore
@@ -1,43 +1,36 @@
-.gradle
-build/
-!gradle/wrapper/gradle-wrapper.jar
-!**/src/main/**/build/
-!**/src/test/**/build/
-
-### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
-*.iws
+# IntelliJ IDEA
+.idea/
 *.iml
 *.ipr
-out/
-!**/src/main/**/out/
-!**/src/test/**/out/
+*.iws
+.idea_modules/
 
-### Eclipse ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-bin/
-!**/src/main/**/bin/
-!**/src/test/**/bin/
+# Java
+*.class
+*.jar
+*.war
+*.ear
+hs_err_pid*
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
+# Gradle
+.gradle/
+build/
+.gradle.kts
 
-### VS Code ###
-.vscode/
+# Selenium
+webdriver.log
 
-### Mac OS ###
+# TestNG
+test-output/
+
+# Gson
+# Add Gson-specific files and directories here if needed
+
+# Logs and backups
+*.log
+*.bak
+*.swp
+
+# OS-specific files
 .DS_Store
-/.idea/
+Thumbs.db
