--- a/ParaBank_POM-0001/build.gradle
+++ b/ParaBank_POM-0001/build.gradle
@@ -11,11 +11,14 @@ repositories {
 
 dependencies {
     // https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java
-    implementation 'org.seleniumhq.selenium:selenium-java:4.18.1'
+    testImplementation 'org.seleniumhq.selenium:selenium-java:4.18.1'
     // https://mvnrepository.com/artifact/org.testng/testng
     testImplementation 'org.testng:testng:7.9.0'
     // https://mvnrepository.com/artifact/com.google.code.gson/gson
-    implementation 'com.google.code.gson:gson:2.10.1'
+    testImplementation 'com.google.code.gson:gson:2.10.1'
+    // https://mvnrepository.com/artifact/io.qameta.allure/allure-testng
+    testImplementation 'io.qameta.allure:allure-testng:2.25.0'
+
 }
 
 test {
